[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Obstacle.gd" type="Script" id=1]
[ext_resource path="res://Assets/items/cone.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "cone",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9, 12 )

[node name="ConeObstacle" type="Area2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="ConeSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1.5, 2.25 )
scale = Vector2( 0.925, 0.884615 )
frames = SubResource( 2 )
animation = "cone"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3, 5 )
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_ConeObstacle_body_entered"]
