[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Obstacle.gd" type="Script" id=1]
[ext_resource path="res://Assets/items/tire.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "tire",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 11.5 )

[node name="TireObstacle" type="Area2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="TireSprite" type="AnimatedSprite" parent="."]
position = Vector2( -1, 9 )
rotation = 1.5708
scale = Vector2( 0.637128, 0.640714 )
frames = SubResource( 2 )
animation = "tire"
flip_v = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, 0.5 )
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_TireObstacle_body_entered"]
