[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Obstacle.gd" type="Script" id=1]
[ext_resource path="res://Assets/items/trunk.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "trunk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21, 8.5 )

[node name="TrunkObstacle" type="Area2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="TrunkSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.750002, 0.75 )
scale = Vector2( 0.645, 0.695313 )
frames = SubResource( 2 )
animation = "trunk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 5, 1.5 )
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_TrunkObstacle_body_entered"]
